# libgeneric

./: CMakeLists.txt
include/: arraylist.h  linkedlist.h  slice.h  types.h
src/: arraylist.c  linkedlist.c  slice.c
test/: arraylist_test.c  linkedlist_test.c  slice_test.c
